--- a/index.html
+++ b/index.html
@@ -10,33 +10,34 @@
 			<h1>Погода здесь</h1>
 		</div>
 		<div class="update_weather">
-			<button>Обновить геолокацию</button>
+			<button class="update_weather_button">
+				<img id="update_geo_img" src="static/images/upd.png"></img>
+				<div id="update_geo_text">Обновить геолокацию</div>
+			</button>
 		</div>
 		<div class="main_city">
-			<h2>Saint Petersburg</h2>
+			<h2 class="main_city_name">Saint Petersburg</h2>
 		</div>
 		<div class="weather_image">
 			<img src="static/images/hedg.png" width=100 height=100></img>
 		</div>
 		<div class="weather_temperature">
-			<h3>8°C</h3>
+			<h3 class="weather_temperature_main">8°C</h3>
 		</div>
 		<div class="weather_properties">
 			<ul>
-				<li>Ветер</li>
-				<li>Облачность</li>
-				<li>Давление</li>
-				<li>Влажность</li>
-				<li>Координаты</li>
+				<li><b>Ветер</b>666 m/s</li>
+				<li><b>Облачность</b>Broken clouds</li>
+				<li><b>Давление</b>1013 hpa</li>
+				<li><b>Влажность</b>52 %</li>
+				<li><b>Координаты</b>[59.88, 30.42]</li>
 			</ul>
 		</div>
 		<div class="favorites">
 			<h1>Избранное</h1>
 		</div>
-		<div class="input_city">
-			<input placeholder="Добавить новый город"></input>
-		</div>
 		<div class="add_city">
+			<input class="input_city" placeholder="Добавить новый город"></input>
 			<button class="add_city_button">+</button>
 		</div>
 		<div class="another_cities">
@@ -48,18 +49,18 @@
 					<h3>5°C</h3>
 				</div>
 				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=20 height=20></img>
+					<img src="static/images/hedg.png" width=50 height=50></img>
 				</div>
 				<div class="another_city_close_button">
-					<button>X</button>
+					<button class="close_button">X</button>
 				</div>
 				<div class="another_city_properties">
 					<ul>
-						<li>Ветер</li>
-						<li>Облачность</li>
-						<li>Давление</li>
-						<li>Влажность</li>
-						<li>Координаты</li>
+						<li><b>Ветер</b>666 m/s</li>
+						<li><b>Облачность</b>Broken clouds</li>
+						<li><b>Давление</b>1013 hpa</li>
+						<li><b>Влажность</b>52 %</li>
+						<li><b>Координаты</b>[59.88, 30.42]</li>
 					</ul>
 				</div>
 			</div>
@@ -71,18 +72,18 @@
 					<h3>5°C</h3>
 				</div>
 				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=20 height=20></img>
+					<img src="static/images/hedg.png" width=50 height=50></img>
 				</div>
 				<div class="another_city_close_button">
-					<button>X</button>
+					<button class="close_button">X</button>
 				</div>
 				<div class="another_city_properties">
 					<ul>
-						<li>Ветер</li>
-						<li>Облачность</li>
-						<li>Давление</li>
-						<li>Влажность</li>
-						<li>Координаты</li>
+						<li><b>Ветер</b>666 m/s</li>
+						<li><b>Облачность</b>Broken clouds</li>
+						<li><b>Давление</b>1013 hpa</li>
+						<li><b>Влажность</b>52 %</li>
+						<li><b>Координаты</b>[59.88, 30.42]</li>
 					</ul>
 				</div>
 			</div>
@@ -94,18 +95,18 @@
 					<h3>5°C</h3>
 				</div>
 				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=20 height=20></img>
+					<img src="static/images/hedg.png" width=50 height=50></img>
 				</div>
 				<div class="another_city_close_button">
-					<button>X</button>
+					<button class="close_button">X</button>
 				</div>
 				<div class="another_city_properties">
 					<ul>
-						<li>Ветер</li>
-						<li>Облачность</li>
-						<li>Давление</li>
-						<li>Влажность</li>
-						<li>Координаты</li>
+						<li><b>Ветер</b>666 m/s</li>
+						<li><b>Облачность</b>Broken clouds</li>
+						<li><b>Давление</b>1013 hpa</li>
+						<li><b>Влажность</b>52 %</li>
+						<li><b>Координаты</b>[59.88, 30.42]</li>
 					</ul>
 				</div>
 			</div>
@@ -117,18 +118,18 @@
 					<h3>5°C</h3>
 				</div>
 				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=20 height=20></img>
+					<img src="static/images/hedg.png" width=50 height=50></img>
 				</div>
 				<div class="another_city_close_button">
-					<button>X</button>
+					<button class="close_button">X</button>
 				</div>
 				<div class="another_city_properties">
 					<ul>
-						<li>Ветер</li>
-						<li>Облачность</li>
-						<li>Давление</li>
-						<li>Влажность</li>
-						<li>Координаты</li>
+						<li><b>Ветер</b>666 m/s</li>
+						<li><b>Облачность</b>Broken clouds</li>
+						<li><b>Давление</b>1013 hpa</li>
+						<li><b>Влажность</b>52 %</li>
+						<li><b>Координаты</b>[59.88, 30.42]</li>
 					</ul>
 				</div>
 			</div>
@@ -140,18 +141,18 @@
 					<h3>5°C</h3>
 				</div>
 				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=20 height=20></img>
+					<img src="static/images/hedg.png" width=50 height=50></img>
 				</div>
 				<div class="another_city_close_button">
-					<button>X</button>
+					<button class="close_button">X</button>
 				</div>
 				<div class="another_city_properties">
 					<ul>
-						<li>Ветер</li>
-						<li>Облачность</li>
-						<li>Давление</li>
-						<li>Влажность</li>
-						<li>Координаты</li>
+						<li><b>Ветер</b>666 m/s</li>
+						<li><b>Облачность</b>Broken clouds</li>
+						<li><b>Давление</b>1013 hpa</li>
+						<li><b>Влажность</b>52 %</li>
+						<li><b>Координаты</b>[59.88, 30.42]</li>
 					</ul>
 				</div>
 			</div>
@@ -163,18 +164,18 @@
 					<h3>5°C</h3>
 				</div>
 				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=20 height=20></img>
+					<img src="static/images/hedg.png" width=50 height=50></img>
 				</div>
 				<div class="another_city_close_button">
-					<button>X</button>
+					<button class="close_button">X</button>
 				</div>
 				<div class="another_city_properties">
 					<ul>
-						<li>Ветер</li>
-						<li>Облачность</li>
-						<li>Давление</li>
-						<li>Влажность</li>
-						<li>Координаты</li>
+						<li><b>Ветер</b>666 m/s</li>
+						<li><b>Облачность</b>Broken clouds</li>
+						<li><b>Давление</b>1013 hpa</li>
+						<li><b>Влажность</b>52 %</li>
+						<li><b>Координаты</b>[59.88, 30.42]</li>
 					</ul>
 				</div>
 			</div>
@@ -186,18 +187,18 @@
 					<h3>5°C</h3>
 				</div>
 				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=20 height=20></img>
+					<img src="static/images/hedg.png" width=50 height=50></img>
 				</div>
 				<div class="another_city_close_button">
-					<button>X</button>
+					<button class="close_button">X</button>
 				</div>
 				<div class="another_city_properties">
 					<ul>
-						<li>Ветер</li>
-						<li>Облачность</li>
-						<li>Давление</li>
-						<li>Влажность</li>
-						<li>Координаты</li>
+						<li><b>Ветер</b>666 m/s</li>
+						<li><b>Облачность</b>Broken clouds</li>
+						<li><b>Давление</b>1013 hpa</li>
+						<li><b>Влажность</b>52 %</li>
+						<li><b>Координаты</b>[59.88, 30.42]</li>
 					</ul>
 				</div>
 			</div>
