--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
 <head>
+	<title>Погода здесь</title>
+	<meta charset="UTF-8">
+	<meta name="keywords" content="weather, city">
+	<meta name="description" content="get your weather here">
+	<meta name="author" content="Daniil Samoylov">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter">
 	<link rel="stylesheet" href="static/css/main.css">
+	<link rel="icon" href="static/images/icon.png">
 </head>
 <body>
 	<main>
