--- a/index.html
+++ b/index.html
@@ -28,31 +28,29 @@
 			<img src="static/images/hedg.png" width=100 height=100></img>
 		</div>
 		<div class="weather_temperature">
-			<h3 class="weather_temperature_main">8°C</h3>
+			<span class="weather_temperature_main">8°C</span>
 		</div>
-		<div class="weather_properties">
-			<ul>
-				<li><b>Ветер</b>666 m/s</li>
-				<li><b>Облачность</b>Broken clouds</li>
-				<li><b>Давление</b>1013 hpa</li>
-				<li><b>Влажность</b>52 %</li>
-				<li><b>Координаты</b>[59.88, 30.42]</li>
-			</ul>
-		</div>
+		<ul class="weather_properties">
+			<li><span class="property">Ветер</span>666 m/s</li>
+			<li><span class="property">Облачность</span>Broken clouds</li>
+			<li><span class="property">Давление</span>1013 hpa</li>
+			<li><span class="property">Влажность</span>52 %</li>
+			<li><span class="property">Координаты</span>[59.88, 30.42]</li>
+		</ul> 
 		<div class="favorites">
-			<h1>Избранное</h1>
+			<h2>Избранное</h2>
 		</div>
 		<div class="add_city">
 			<input class="input_city" placeholder="Добавить новый город"></input>
 			<button class="add_city_button">+</button>
 		</div>
-		<div class="another_cities">
-			<div class="another_city">
+		<ul class="another_cities">
+			<li class="another_city">
 				<div class="another_city_name">
-					<h2>Moscow</h2>
+					<h3>Moscow</h3>
 				</div>
 				<div class="another_city_temperature">
-					<h3>5°C</h3>
+					<span>5°C</span>
 				</div>
 				<div class="another_city_weather_image">
 					<img src="static/images/hedg.png" width=50 height=50></img>
@@ -60,22 +58,20 @@
 				<div class="another_city_close_button">
 					<button class="close_button">X</button>
 				</div>
-				<div class="another_city_properties">
-					<ul>
-						<li><b>Ветер</b>666 m/s</li>
-						<li><b>Облачность</b>Broken clouds</li>
-						<li><b>Давление</b>1013 hpa</li>
-						<li><b>Влажность</b>52 %</li>
-						<li><b>Координаты</b>[59.88, 30.42]</li>
-					</ul>
-				</div>
-			</div>
-			<div class="another_city">
+				<ul class="another_city_properties">
+					<li><span class="property">Ветер</span>666 m/s</li>
+					<li><span class="property">Облачность</span>Broken clouds</li>
+					<li><span class="property">Давление</span>1013 hpa</li>
+					<li><span class="property">Влажность</span>52 %</li>
+					<li><span class="property">Координаты</span>[59.88, 30.42]</li>
+				</ul>
+			</li>
+			<li class="another_city">
 				<div class="another_city_name">
-					<h2>Moscow</h2>
+					<h3>Moscow</h3>
 				</div>
 				<div class="another_city_temperature">
-					<h3>5°C</h3>
+					<span>5°C</span>
 				</div>
 				<div class="another_city_weather_image">
 					<img src="static/images/hedg.png" width=50 height=50></img>
@@ -83,22 +79,20 @@
 				<div class="another_city_close_button">
 					<button class="close_button">X</button>
 				</div>
-				<div class="another_city_properties">
-					<ul>
-						<li><b>Ветер</b>666 m/s</li>
-						<li><b>Облачность</b>Broken clouds</li>
-						<li><b>Давление</b>1013 hpa</li>
-						<li><b>Влажность</b>52 %</li>
-						<li><b>Координаты</b>[59.88, 30.42]</li>
-					</ul>
-				</div>
-			</div>
-			<div class="another_city">
+				<ul class="another_city_properties">
+					<li><span class="property">Ветер</span>666 m/s</li>
+					<li><span class="property">Облачность</span>Broken clouds</li>
+					<li><span class="property">Давление</span>1013 hpa</li>
+					<li><span class="property">Влажность</span>52 %</li>
+					<li><span class="property">Координаты</span>[59.88, 30.42]</li>
+				</ul>
+			</li>
+			<li class="another_city">
 				<div class="another_city_name">
-					<h2>Moscow</h2>
+					<h3>Moscow</h3>
 				</div>
 				<div class="another_city_temperature">
-					<h3>5°C</h3>
+					<span>5°C</span>
 				</div>
 				<div class="another_city_weather_image">
 					<img src="static/images/hedg.png" width=50 height=50></img>
@@ -106,22 +100,20 @@
 				<div class="another_city_close_button">
 					<button class="close_button">X</button>
 				</div>
-				<div class="another_city_properties">
-					<ul>
-						<li><b>Ветер</b>666 m/s</li>
-						<li><b>Облачность</b>Broken clouds</li>
-						<li><b>Давление</b>1013 hpa</li>
-						<li><b>Влажность</b>52 %</li>
-						<li><b>Координаты</b>[59.88, 30.42]</li>
-					</ul>
-				</div>
-			</div>
-			<div class="another_city">
+				<ul class="another_city_properties">
+					<li><span class="property">Ветер</span>666 m/s</li>
+					<li><span class="property">Облачность</span>Broken clouds</li>
+					<li><span class="property">Давление</span>1013 hpa</li>
+					<li><span class="property">Влажность</span>52 %</li>
+					<li><span class="property">Координаты</span>[59.88, 30.42]</li>
+				</ul>
+			</li>
+			<li class="another_city">
 				<div class="another_city_name">
-					<h2>Moscow</h2>
+					<h3>Moscow</h3>
 				</div>
 				<div class="another_city_temperature">
-					<h3>5°C</h3>
+					<span>5°C</span>
 				</div>
 				<div class="another_city_weather_image">
 					<img src="static/images/hedg.png" width=50 height=50></img>
@@ -129,22 +121,20 @@
 				<div class="another_city_close_button">
 					<button class="close_button">X</button>
 				</div>
-				<div class="another_city_properties">
-					<ul>
-						<li><b>Ветер</b>666 m/s</li>
-						<li><b>Облачность</b>Broken clouds</li>
-						<li><b>Давление</b>1013 hpa</li>
-						<li><b>Влажность</b>52 %</li>
-						<li><b>Координаты</b>[59.88, 30.42]</li>
-					</ul>
-				</div>
-			</div>
-			<div class="another_city">
+				<ul class="another_city_properties">
+					<li><span class="property">Ветер</span>666 m/s</li>
+					<li><span class="property">Облачность</span>Broken clouds</li>
+					<li><span class="property">Давление</span>1013 hpa</li>
+					<li><span class="property">Влажность</span>52 %</li>
+					<li><span class="property">Координаты</span>[59.88, 30.42]</li>
+				</ul>
+			</li>
+			<li class="another_city">
 				<div class="another_city_name">
-					<h2>Moscow</h2>
+					<h3>Moscow</h3>
 				</div>
 				<div class="another_city_temperature">
-					<h3>5°C</h3>
+					<span>5°C</span>
 				</div>
 				<div class="another_city_weather_image">
 					<img src="static/images/hedg.png" width=50 height=50></img>
@@ -152,22 +142,20 @@
 				<div class="another_city_close_button">
 					<button class="close_button">X</button>
 				</div>
-				<div class="another_city_properties">
-					<ul>
-						<li><b>Ветер</b>666 m/s</li>
-						<li><b>Облачность</b>Broken clouds</li>
-						<li><b>Давление</b>1013 hpa</li>
-						<li><b>Влажность</b>52 %</li>
-						<li><b>Координаты</b>[59.88, 30.42]</li>
-					</ul>
-				</div>
-			</div>
-			<div class="another_city">
+				<ul class="another_city_properties">
+					<li><span class="property">Ветер</span>666 m/s</li>
+					<li><span class="property">Облачность</span>Broken clouds</li>
+					<li><span class="property">Давление</span>1013 hpa</li>
+					<li><span class="property">Влажность</span>52 %</li>
+					<li><span class="property">Координаты</span>[59.88, 30.42]</li>
+				</ul>
+			</li>
+			<li class="another_city">
 				<div class="another_city_name">
-					<h2>Moscow</h2>
+					<h3>Moscow</h3>
 				</div>
 				<div class="another_city_temperature">
-					<h3>5°C</h3>
+					<span>5°C</span>
 				</div>
 				<div class="another_city_weather_image">
 					<img src="static/images/hedg.png" width=50 height=50></img>
@@ -175,39 +163,14 @@
 				<div class="another_city_close_button">
 					<button class="close_button">X</button>
 				</div>
-				<div class="another_city_properties">
-					<ul>
-						<li><b>Ветер</b>666 m/s</li>
-						<li><b>Облачность</b>Broken clouds</li>
-						<li><b>Давление</b>1013 hpa</li>
-						<li><b>Влажность</b>52 %</li>
-						<li><b>Координаты</b>[59.88, 30.42]</li>
-					</ul>
-				</div>
-			</div>
-			<div class="another_city">
-				<div class="another_city_name">
-					<h2>Moscow</h2>
-				</div>
-				<div class="another_city_temperature">
-					<h3>5°C</h3>
-				</div>
-				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=50 height=50></img>
-				</div>
-				<div class="another_city_close_button">
-					<button class="close_button">X</button>
-				</div>
-				<div class="another_city_properties">
-					<ul>
-						<li><b>Ветер</b>666 m/s</li>
-						<li><b>Облачность</b>Broken clouds</li>
-						<li><b>Давление</b>1013 hpa</li>
-						<li><b>Влажность</b>52 %</li>
-						<li><b>Координаты</b>[59.88, 30.42]</li>
-					</ul>
-				</div>
-			</div>
+				<ul class="another_city_properties">
+					<li><span class="property">Ветер</span>666 m/s</li>
+					<li><span class="property">Облачность</span>Broken clouds</li>
+					<li><span class="property">Давление</span>1013 hpa</li>
+					<li><span class="property">Влажность</span>52 %</li>
+					<li><span class="property">Координаты</span>[59.88, 30.42]</li>
+				</ul>
+			</li>
 		</div>
 	</main>
 </body>
