--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 	<meta name="keywords" content="weather, city">
 	<meta name="description" content="get your weather here">
 	<meta name="author" content="Daniil Samoylov">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter">
 	<link rel="stylesheet" href="static/css/main.css">
 	<link rel="icon" href="static/images/icon.png">
+	<script src="static/js/main.js"></script>
 </head>
-<body>
+<body onload="main();">
 	<main>
 		<div class="weather_here">
 			<h1>Погода здесь</h1>
@@ -41,137 +42,11 @@
 			<h2>Избранное</h2>
 		</div>
 		<div class="add_city">
-			<input class="input_city" placeholder="Добавить новый город"></input>
-			<button class="add_city_button">+</button>
+			<input id="input_city" class="input_city" placeholder="Добавить новый город"></input>
+			<button id="add_city_button" class="add_city_button" onclick="add_city(document.getElementById('input_city').value);document.getElementById('input_city').value = ''">+</button>
 		</div>
 		<ul class="another_cities">
-			<li class="another_city">
-				<div class="another_city_name">
-					<h3>Moscow</h3>
-				</div>
-				<div class="another_city_temperature">
-					<span>5°C</span>
-				</div>
-				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=50 height=50></img>
-				</div>
-				<div class="another_city_close_button">
-					<button class="close_button">X</button>
-				</div>
-				<ul class="another_city_properties">
-					<li><span class="property">Ветер</span>666 m/s</li>
-					<li><span class="property">Облачность</span>Broken clouds</li>
-					<li><span class="property">Давление</span>1013 hpa</li>
-					<li><span class="property">Влажность</span>52 %</li>
-					<li><span class="property">Координаты</span>[59.88, 30.42]</li>
-				</ul>
-			</li>
-			<li class="another_city">
-				<div class="another_city_name">
-					<h3>Moscow</h3>
-				</div>
-				<div class="another_city_temperature">
-					<span>5°C</span>
-				</div>
-				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=50 height=50></img>
-				</div>
-				<div class="another_city_close_button">
-					<button class="close_button">X</button>
-				</div>
-				<ul class="another_city_properties">
-					<li><span class="property">Ветер</span>666 m/s</li>
-					<li><span class="property">Облачность</span>Broken clouds</li>
-					<li><span class="property">Давление</span>1013 hpa</li>
-					<li><span class="property">Влажность</span>52 %</li>
-					<li><span class="property">Координаты</span>[59.88, 30.42]</li>
-				</ul>
-			</li>
-			<li class="another_city">
-				<div class="another_city_name">
-					<h3>Moscow</h3>
-				</div>
-				<div class="another_city_temperature">
-					<span>5°C</span>
-				</div>
-				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=50 height=50></img>
-				</div>
-				<div class="another_city_close_button">
-					<button class="close_button">X</button>
-				</div>
-				<ul class="another_city_properties">
-					<li><span class="property">Ветер</span>666 m/s</li>
-					<li><span class="property">Облачность</span>Broken clouds</li>
-					<li><span class="property">Давление</span>1013 hpa</li>
-					<li><span class="property">Влажность</span>52 %</li>
-					<li><span class="property">Координаты</span>[59.88, 30.42]</li>
-				</ul>
-			</li>
-			<li class="another_city">
-				<div class="another_city_name">
-					<h3>Moscow</h3>
-				</div>
-				<div class="another_city_temperature">
-					<span>5°C</span>
-				</div>
-				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=50 height=50></img>
-				</div>
-				<div class="another_city_close_button">
-					<button class="close_button">X</button>
-				</div>
-				<ul class="another_city_properties">
-					<li><span class="property">Ветер</span>666 m/s</li>
-					<li><span class="property">Облачность</span>Broken clouds</li>
-					<li><span class="property">Давление</span>1013 hpa</li>
-					<li><span class="property">Влажность</span>52 %</li>
-					<li><span class="property">Координаты</span>[59.88, 30.42]</li>
-				</ul>
-			</li>
-			<li class="another_city">
-				<div class="another_city_name">
-					<h3>Moscow</h3>
-				</div>
-				<div class="another_city_temperature">
-					<span>5°C</span>
-				</div>
-				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=50 height=50></img>
-				</div>
-				<div class="another_city_close_button">
-					<button class="close_button">X</button>
-				</div>
-				<ul class="another_city_properties">
-					<li><span class="property">Ветер</span>666 m/s</li>
-					<li><span class="property">Облачность</span>Broken clouds</li>
-					<li><span class="property">Давление</span>1013 hpa</li>
-					<li><span class="property">Влажность</span>52 %</li>
-					<li><span class="property">Координаты</span>[59.88, 30.42]</li>
-				</ul>
-			</li>
-			<li class="another_city">
-				<div class="another_city_name">
-					<h3>Moscow</h3>
-				</div>
-				<div class="another_city_temperature">
-					<span>5°C</span>
-				</div>
-				<div class="another_city_weather_image">
-					<img src="static/images/hedg.png" width=50 height=50></img>
-				</div>
-				<div class="another_city_close_button">
-					<button class="close_button">X</button>
-				</div>
-				<ul class="another_city_properties">
-					<li><span class="property">Ветер</span>666 m/s</li>
-					<li><span class="property">Облачность</span>Broken clouds</li>
-					<li><span class="property">Давление</span>1013 hpa</li>
-					<li><span class="property">Влажность</span>52 %</li>
-					<li><span class="property">Координаты</span>[59.88, 30.42]</li>
-				</ul>
-			</li>
-		</div>
+		</ul>
 	</main>
 </body>
 </html>
