edit info while waiting load

--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
 			<h1>Погода здесь</h1>
 		</div>
 		<div class="update_weather">
-			<button class="update_weather_button">
+			<button class="update_weather_button" onclick="start_geo();">
 				<img id="update_geo_img" src="static/images/upd.png"></img>
 				<div id="update_geo_text">Обновить геолокацию</div>
 			</button>
 		</div>
 		<div class="main_city">
-			<h2 class="main_city_name">Saint Petersburg</h2>
+			<h2 class="main_city_name">Данные загружаются...</h2>
 		</div>
 		<div class="weather_image">
-			<img src="static/images/hedg.png" width=100 height=100></img>
+			<img src="static/images/question_mark.png" width=100 height=100></img>
 		</div>
 		<div class="weather_temperature">
-			<span class="weather_temperature_main">8°C</span>
+			<span class="weather_temperature_main">???°C</span>
 		</div>
 		<ul class="weather_properties">
-			<li><span class="property">Ветер</span>666 m/s</li>
-			<li><span class="property">Облачность</span>Broken clouds</li>
-			<li><span class="property">Давление</span>1013 hpa</li>
-			<li><span class="property">Влажность</span>52 %</li>
-			<li><span class="property">Координаты</span>[59.88, 30.42]</li>
+			<li><span class="property">Ветер</span>??? m/s</li>
+			<li><span class="property">Облачность</span>???</li>
+			<li><span class="property">Давление</span>??? hpa</li>
+			<li><span class="property">Влажность</span>??? %</li>
+			<li><span class="property">Координаты</span>[???, ???]</li>
 		</ul> 
 		<div class="favorites">
 			<h2>Избранное</h2>
