--- a/index.html
+++ b/index.html
@@ -46,6 +46,29 @@
 			<button id="add_city_button" class="add_city_button" onclick="add_city(document.getElementById('input_city').value);document.getElementById('input_city').value = ''">+</button>
 		</div>
 		<ul class="another_cities">
+			<li class="another_city fake_city">
+				<div class="another_city_header">
+					<div class="another_city_name">
+						<h3>???</h3>
+					</div>
+					<div class="another_city_temperature">
+						<span>???°C</span>
+					</div>
+					<div class="another_city_weather_image">
+						<img src="static/images/question_mark.png" width="50" height="50">
+					</div>
+					<div class="another_city_close_button">
+						<button class="close_button">X</button>
+					</div>
+				</div>
+				<ul class="another_city_properties">
+					<li><span class="property">Ветер</span>??? m/s</li>
+					<li><span class="property">Облачность</span>???</li>
+					<li><span class="property">Давление</span>??? hpa</li>
+					<li><span class="property">Влажность</span>??? %</li>
+					<li><span class="property">Координаты</span>[???, ???]</li>
+				</ul>
+			</li>
 		</ul>
 	</main>
 </body>
